fix menu on mobile

--- a/_pgbackup/main_1521158521.css
+++ b/_pgbackup/main_1521158521.css
@@ -11,6 +11,15 @@ body {
     margin: 0;
 }
 
+.topcorner {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 25px;
+    margin-top: 10px;
+    z-index: 999;
+}
+
 #logo {
     float: left;
     z-index: 1000;
@@ -66,7 +75,7 @@ body {
 -------------------------------------------------- */
 /* Center align the text within the three columns below the carousel */
 .content {
-    padding-top: 175px;
+    padding-top: 110px;
     margin: 0 auto -50px;
     padding-left: 10%;
     padding-right: 5%;
@@ -75,6 +84,13 @@ body {
 .content .col-xs-6 {
     margin-bottom: 20px;
     text-align: center;
+    vertical-align: center;
+    z-index: 21;
+}
+
+.content .col-xs-6 .img {
+    height: 150px;
+    right: 0px;
 }
 
 .content .col-xs-6 {
@@ -108,17 +124,37 @@ body {
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .TopImages {
         display: none;
     }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+    .content {
+        padding-top: 90px;
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+
+    .navbar-brand {
+        padding-left: 5px;
+    }
+
+    .navbar-wrapper {
+        padding-top: 5px;
+    }
+}
+
+@media (min-width: 769px) {
     /* Navbar positioning foo */
     .navbar-wrapper {
         margin-top: 0px;
         background-color: #fdfbee;
+    }
+
+    .navbar-brand {
+        padding-left: 165px;
     }
 
     .TopImages {
@@ -145,7 +181,7 @@ body {
     /* Bump up size of carousel content */
     .carousel-caption p {
         margin-bottom: 20px;
-        font-size: 21px;
+        font-size: 12px;
         line-height: 1.4;
     }
 
